--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>dafdaf</h1>
     <p>adfadsfadsfadsf resolved</p>
     <h2>added h2 line on 9/12/25</h2>
-    <h2>added h2 line copy on 9/12/25</h2>
+    <h2>added h2 line copy on 9/12/25(new words by master)</h2>
 </body>
 </html>
