add new h2 element to index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>adfadsfadsfadsf resolved</p>
     <h2>added h2 line on 9/12/25</h2>
     <h2>added h2 line copy on 9/12/25 (some new words)</h2>
+    <h2>added h2 line copy on 9/12/25(new words by master)</h2>
 </body>
 </html>
